# discord-quest-helper

./: .gitignore  CONTRIBUTING.md  README.md  build.ps1  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build-release.yml
public/: version-desc.txt  version.txt
scripts/: build-cdp-launcher.js  build-runner.js  i18n-audit.mjs  i18n-validate.mjs  migrate-locales-to-json.mjs
src/: App.vue  i18n.ts  style.css
src-cdp-launcher/: Cargo.toml  build.rs
src-cdp-launcher/resources/: launcher.rc
src-cdp-launcher/src/: main.rs
src-runner/: build.rs
src-runner/src/: main.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cdp_client.rs  cdp_quest.rs  discord_api.rs  discord_cdp_launcher.rs  discord_gateway.rs  game_simulator.rs  lib.rs  logger.rs  models.rs  quest_completer.rs  stealth.rs  super_properties.rs  token_extractor.rs
src/api/: tauri.ts
src/components/: GameSelector.vue  QuestCard.vue  QuestProgress.vue  QuestTaskBadges.vue  Toaster.vue  UserStatus.vue
src/components/home/: NextBestActionPanel.vue
src/components/settings/: AboutSettings.vue  AccountSettings.vue  AdvancedDisclosure.vue  AdvancedSettings.vue  (+8 more)
src/composables/: useHomeQuestState.ts  useSettingsNavigation.ts
src/locales/: de.json  de.ts  en.json  en.ts  es.json  es.ts  fr.json  fr.ts  id.json  id.ts  ja.json  ja.ts  ko.json  ko.ts  pl.json  pl.ts  pt-BR.json  pt-BR.ts  pt-PT.json  pt-PT.ts  ru.json  ru.ts  th.json  th.ts  tr.json  tr.ts  vi.json  vi.ts  zh-TW.json  zh-TW.ts  zh.json  zh.ts
src/stores/: auth.ts  quests.ts  version.ts
src/utils/: navigate.ts  questRewards.test.ts  questRewards.ts  questTasks.ts
src/views/: Debug.vue  GameSimulator.vue  Home.vue  Settings.vue
