[package]
name = "discord-quest-helper"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord_quest_helper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
discord-sdk = "0.4.0"
once_cell = "1.18"

tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", default-features = false, features = ["native-tls", "json", "charset", "http2"] }
regex = "1"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.9"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
futures-util = "0.3"
flate2 = "1"
url = "2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-dialog = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Security_Cryptography",
    "Win32_Foundation",
    "Storage_Streams",
] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
pbkdf2 = "0.12"
sha1 = "0.10"
cbc = { version = "0.1", features = ["alloc"] }
aes = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
